dockerized  denti go app,  updated docker compose
Added dockerfile to create the denti go docker  image

docker compose refers to the  image from (hub.docker.com/akbarali/denti )

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,28 +1,35 @@
 version: '3'
 services:
-  postgres:
-    image: postgres
-    hostname: postgres
-    ports:
-      - "6543:5432"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: denti
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    restart: unless-stopped
+ postgres:
+   image: postgres
+   hostname: postgres
+   ports:
+     - "6543:5432"
+   environment:
+     POSTGRES_USER: postgres
+     POSTGRES_PASSWORD: postgres
+     POSTGRES_DB: denti
+   volumes:
+     - postgres-data:/var/lib/postgresql/data
+   restart: unless-stopped
 
-  pgadmin:
-    image: dpage/pgadmin4
-    depends_on:
-      - postgres
-    ports:
-      - "5555:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
-      PGADMIN_DEFAULT_PASSWORD: admin
-    restart: unless-stopped
+ pgadmin:
+   image: dpage/pgadmin4
+   depends_on:
+     - postgres
+   ports:
+     - "5555:80"
+   environment:
+     PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+     PGADMIN_DEFAULT_PASSWORD: admin
+   restart: unless-stopped
 
+ go-app:
+  image: akbarali/denti
+  container_name: denti_cont
+  ports:
+    - "8282:8282"
+  links:
+    - postgres     
 volumes:
   postgres-data:
